--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.PersonalDetails {
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
+  width: 100%;
+}
+
+.horizontal {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.textField {
+  width: 48%;
+}
+
+/* .textFieldContainer {
+  display: flex;
+  border: 2px;
+  border-radius: 15px;
+  border-color: #D69F29;
+  border-style: solid;
+  padding: 10px;
+} */
+
+.answerTextFieldContainer {
+  display: flex;
+  border: 2px;
+  border-radius: 15px;
+  border-color: #D69F29;
+  border-style: solid;
+  padding: 10px;
+  height: 70px;
+}
+
+.email {
+  display: flex;
+  width: 100%;
+}
+
+.registrationPage {
+  display: flex;
+  flex-direction: column;
+  margin-left: 6%;
+  margin-right: 6%;
   align-items: center;
+}
+
+.logo {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 1%;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 48px;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subTitle {
+  display: flex;
+  font-size: 32px;
+  width: 70%;
+  margin: 1%;
+  text-align: center;
+  margin: 5px;
+  padding-bottom: 20px;
+}
+
+.boldSideHeading {
+  display: flex;
+  align-self: flex-start;
+  font-weight: bold;
+  font-size: 36px;
+  margin: 5px;
+}
+
+.normalSideHeading {
+  display: flex;
+  align-self: flex-start;
+  font-size: 32px;
+  margin: 5px;
+  padding-top: 20px;
+}
+
+.sideContent {
+  font-size: 24px;
+  padding-top: 30px;
+  margin: 5px;
+}
+
+.normalSideContent {
+  font-size: 20px;
+  padding-top: 24px;
+  margin: 5px;
+}
+
+.hspacer {
+  width: 100px;
+}
+
+.vspacer {
+  height: 30px;
 }
