--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
   display: flex;
   justify-content: center;
   margin: 1%;
+  padding-bottom: 50px;
 }
 
 .title {
@@ -106,4 +107,59 @@
 
 .vspacer {
   height: 30px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 250px;
+  background-color: #323232;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.footerLogo {
+  float: left;
+
+}
+
+.footerContent {
+  float: right;
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+  justify-content: space-between;
+}
+
+.logoText {
+  font-size: 60px;
+  color: white;
+}
+
+.addressText {
+  padding-top: 20px;
+  width: 30%;
+  font-size: 20px;
+  color: white;
+
+}
+
+.footerRightSection {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  color: white;
+}
+
+.submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* background-color: #D69F29;
+  border-radius: 12px;
+  border: 10px; */
 }
