--- a/src/Screens/DriverRegistration.css
+++ b/src/Screens/DriverRegistration.css
@@ -1,3 +1,14 @@
+.devNavBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #323232;
+  padding: 10px;
+  color: white;
+
+}
+
 .PersonalDetails {
   padding-top: 30px;
   display: flex;
@@ -42,8 +53,8 @@
 .registrationPage {
   display: flex;
   flex-direction: column;
-  margin-left: 6%;
-  margin-right: 6%;
+  margin-left: 10%;
+  margin-right: 10%;
   align-items: center;
 }
 
