--- a/src/Screens/AdminScreens/NewDriverScreen.css
+++ b/src/Screens/AdminScreens/NewDriverScreen.css
@@ -15,14 +15,28 @@
 
 }
 
+.driversContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+
+}
+
 .driverCard {
     display: flex;
-    width: 40%;
+    width: 30%;
     flex-direction: column;
     text-wrap: wrap;
     border: 1px solid #D69F29;
-    box-shadow: 0 5px 15px #D69F29;
     border-radius: 15px;
     padding: 10px;
     margin: 20px;
+}
+
+.driverCardButtonContainer {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
 }
