--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -20,3 +20,100 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.hero>video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    margin-top: 60px;
+}
+
+.hero {
+    width: 100%;
+    position: relative;
+    background-color: black;
+}
+
+.hero-text {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+    color: white;
+    padding-bottom: 100px;
+}
+
+.hero-text>h1 {
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.hero-text>p {
+    font-size: 28px;
+    font-weight: 100;
+}
+
+.blank {
+    background-color: black;
+}
+
+
+.flow {
+    width: 100%;
+    background-color: black;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 0px;
+    gap: 10%;
+}
+
+.flow-item {
+    background-color: #DBDF00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    width: 8%;
+    object-fit: contain;
+    border-radius: 12px;
+}
+
+.map {
+    width: 100%;
+}
+
+.map>img {
+    width: 100%;
+    height: 70vh;
+    object-fit: cover;
+}
+
+.about,
+.service {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    /* background-color: red; */
+    width: 80%;
+    padding: 80px 20px;
+    gap: 30px;
+}
