--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -1,9 +1,15 @@
 .header {
+    width: 100vw;
+    height: 60px;
     display: flex;
+    position: fixed;
+    top: 0;
+    background-color: white;
     flex-direction: row;
     align-items: center;
-    padding: 15px 30px;
-    justify-content: space-between;
+    justify-content: space-around;
+    z-index: 100;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .headerButtonsContainer {
@@ -85,7 +91,7 @@
 }
 
 .flow-item {
-    background-color: #DBDF00;
+    background-color: var(--yellow);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,6 +100,7 @@
     width: 8%;
     object-fit: contain;
     border-radius: 12px;
+    background-color: #D69F29;
 }
 
 .map {
@@ -102,12 +109,13 @@
 
 .map>img {
     width: 100%;
-    height: 70vh;
+    height: 50vh;
     object-fit: cover;
 }
 
 .about,
-.service {
+.service,
+.trucks {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -116,4 +124,135 @@
     width: 80%;
     padding: 80px 20px;
     gap: 30px;
+}
+
+.about-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 30px;
+}
+
+.about-left {
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.about-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-right>img {
+    width: 100%;
+}
+
+.service-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 10px; */
+    gap: 30px;
+}
+
+.service-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #D69F29;
+    padding: 30px;
+    gap: 10px;
+    border-radius: 12px;
+    width: 50%;
+    height: 300px;
+    object-fit: contain;
+}
+
+.service-box>img {
+    width: 200px;
+    height: 150px;
+    object-fit: contain;
+}
+
+.trucks-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* Adjust the minimum and maximum width as needed */
+    gap: 20px;
+}
+
+.mobile {
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 80px;
+    /* background-color: blue; */
+}
+
+.mobile-text {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-right: 80px;
+}
+
+.apply-button {
+    background-color: var(--yellow);
+    padding: 10px 30px;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    border-radius: 12px;
+    margin-top: 30px;
+}
+
+.mobile-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer {
+    background-color: #323232;
+    width: 100%;
+    color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 30px 0px;
+}
+
+.footer-left {
+    margin-left: 20%;
+}
+
+.footer-right {
+    display: flex;
+    justify-content: space-between;
+    /* background-color: red; */
+    margin-right: 20%;
+    gap: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    .about-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .service-container {
+        /* display: none; */
+        flex-direction: column;
+    }
+
+    .service-box {
+        height: 200px;
+        width: 100%;
+    }
+
+    .service-box>img {
+        width: 30%;
+    }
 }
