--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -1,3 +1,4 @@
+* { border: 1px solid red !important; }
 .header {
     width: 100vw;
     height: 60px;
@@ -15,7 +16,8 @@
 .headerButtonsContainer {
     display: flex;
     flex-direction: row;
-    width: 500px;
+    /* width: 500px; */
+    gap: 30px;
     align-items: center;
     justify-content: space-between;
 }
@@ -163,11 +165,11 @@
     align-items: center;
     flex-direction: column;
     background-color: #D69F29;
-    padding: 30px;
+    /* padding: 30px; */
     gap: 10px;
     border-radius: 12px;
-    width: 50%;
-    height: 300px;
+    /* width: 50%; */
+    height: 600px;
     object-fit: contain;
 }
 
@@ -216,43 +218,75 @@
     align-items: center;
 }
 
-.footer {
+.mobile-left > img {
+    width: 100%;
+}
+
+.landing-footer{
     background-color: #323232;
     width: 100%;
     color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 30px 0px;
+    /* padding: 30px 0px; */
 }
 
 .footer-left {
-    margin-left: 20%;
+    /* margin-left: 20%; */
 }
 
 .footer-right {
     display: flex;
     justify-content: space-between;
     /* background-color: red; */
-    margin-right: 20%;
+    /* margin-right: 20%; */
     gap: 20px;
+}
+
+@media only screen and (max-width: 1024px) {
+    .service-container {
+        flex-direction: column;
+    }
+    .landing-footer{
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 768px) {
     .about-grid {
         grid-template-columns: 1fr;
     }
-
-    .service-container {
-        /* display: none; */
-        flex-direction: column;
+    .service-box {
+        /* height: 200px; */
+        width: 100%;
+        /* padding: 30px; */
     }
 
-    .service-box {
-        height: 200px;
-        width: 100%;
+    .service-box > p {
+        padding: 30px;
     }
 
     .service-box>img {
-        width: 30%;
+        /* width: 30%; */
+    }
+    .mobile  {
+        grid-template-columns: 1fr;
+    }
+    .headerButtonsContainer {
+        display: none;
+    }
+    
+}
+
+@media only screen and (max-width: 425px) {
+    .userActionContainer {
+        display: none;
+    }
+    .landing-footer{
+        display: block;
+        grid-template-columns: 1fr;
+    }
+    .footer-right {
+        flex-direction: column;
     }
 }
