--- a/src/Screens/DriverDashboard.css
+++ b/src/Screens/DriverDashboard.css
@@ -22,18 +22,29 @@
     margin-bottom: 30px;
 }
 
-.textField {
-    width: 48%;
+.dashHeader {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    position: fixed;
+    top: 0;
+    background-color: white;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 100;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-/* .textFieldContainer {
+.dashHeaderButtonContainer {
     display: flex;
-    border: 2px;
-    border-radius: 15px;
-    border-color: #D69F29;
-    border-style: solid;
-    padding: 10px;
-  } */
+    flex-direction: row;
+    gap: 30px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
 
 .answerTextFieldContainer {
     display: flex;
@@ -185,8 +196,12 @@
 
 .dashboard-content {
     /* background-color: rgb(255, 144, 144); */
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 80%;
-    padding: 30px;
+    padding: 10px;
 }
 
 .dashboard h1 {
@@ -203,23 +218,41 @@
     margin-top: 30px;
 }
 
-.status > p {
+.status>p {
     color: red;
 }
 
-.dash-grid {
+/* .dash-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 30px;
     gap: 30px;
+} */
+.dash-grid {
+    width: 100%;
 }
 
-.dash-grid input, .dashboard textarea, .dash-grid select{
+.dashboard textarea {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
     padding: 14px;
     border-radius: 12px;
     background-color: #E1E1E1;
     border: none;
     outline: none;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.dash-grid select,
+.dash-grid input {
+    padding: 14px;
+    border-radius: 12px;
+    background-color: #E1E1E1;
+    border: none;
+    outline: none;
+    font-size: 20px;
 }
 
 .dashboard textarea {
@@ -239,14 +272,27 @@
     grid-template-columns: 1fr 1fr;
     gap: 30px;
 }
+
 .title {
     margin-top: 30px;
     font-size: 30px;
 }
 
-@media only screen and (max-width: 768px) { 
+@media only screen and (max-width: 768px) {
     .dash-grid {
         grid-template-columns: 1fr;
+    }
+
+    .dashHeader {
+        display: flex;
+    }
+
+    .dashHeader>img {
+        margin: 10px;
+    }
+
+    .dashHeaderButtonContainer {
+        margin: 10px;
     }
 }
 
@@ -254,12 +300,15 @@
     .dashboard-content {
         width: 100%;
     }
+
     .dashboard textarea {
         width: 90%;
     }
+
     .dash-right {
         grid-template-columns: 1fr;
     }
+
     .side {
         flex-direction: column;
     }
