--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -54,7 +54,7 @@
     bottom: 0;
     text-align: center;
     width: 100%;
-    height: 500px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,7 +87,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 100px 0px;
+    padding: 50px 0px;
     gap: 10%;
 }
 
@@ -110,7 +110,7 @@
 
 .map>img {
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     object-fit: cover;
 }
 
@@ -123,7 +123,7 @@
     /* align-items: center; */
     /* background-color: red; */
     width: 80%;
-    padding: 80px 20px;
+    padding: 30px 20px;
     gap: 30px;
 }
 
@@ -164,11 +164,11 @@
     align-items: center;
     flex-direction: column;
     background-color: #D69F29;
-    /* padding: 30px; */
+    padding: 30px 30px;
     gap: 10px;
     border-radius: 12px;
     /* width: 50%; */
-    height: 600px;
+    height: auto;
     object-fit: contain;
 }
 
@@ -183,6 +183,16 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     /* Adjust the minimum and maximum width as needed */
     gap: 20px;
+}
+
+
+.carousel-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ebdbb8;
+    border-radius: 12px;
 }
 
 .mobile {
@@ -217,11 +227,11 @@
     align-items: center;
 }
 
-.mobile-left > img {
+.mobile-left>img {
     width: 100%;
 }
 
-.landing-footer{
+.landing-footer {
     background-color: #323232;
     width: 100%;
     color: white;
@@ -243,48 +253,104 @@
 }
 
 @media only screen and (max-width: 1024px) {
+    .flow {
+        flex-direction: column;
+        gap: 30px;
+    }
+
     .service-container {
         flex-direction: column;
     }
-    .landing-footer{
+
+
+    .landing-footer {
         display: none;
     }
 }
 
 @media only screen and (max-width: 768px) {
+    .hero-text>p {
+        padding: 10px
+    }
+
+    .flow-item {
+        width: 80%;
+        height: 80px;
+    }
+
     .about-grid {
         grid-template-columns: 1fr;
     }
+
     .service-box {
         /* height: 200px; */
         width: 100%;
         /* padding: 30px; */
     }
 
-    .service-box > p {
+    .service-box>p {
         padding: 30px;
     }
 
     .service-box>img {
         /* width: 30%; */
     }
-    .mobile  {
-        grid-template-columns: 1fr;
+
+    .mobile {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
+
+    .mobile-text {
+        margin-right: 0px;
+    }
+
+    .apply-button {
+        margin: 10px;
+        font-size: 20px;
+
+    }
+
     .headerButtonsContainer {
         display: none;
     }
-    
+
+    .landing-footer {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .footer-box {
+        padding: 10px;
+    }
+
 }
 
 @media only screen and (max-width: 425px) {
     .userActionContainer {
         display: none;
     }
-    .landing-footer{
-        display: block;
-        grid-template-columns: 1fr;
+
+    .landing-footer {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
+
+    .footer-box {
+        padding: 10px;
+    }
+
     .footer-right {
         flex-direction: column;
     }
