--- a/src/Screens/DriverLogin.css
+++ b/src/Screens/DriverLogin.css
@@ -1,3 +1,4 @@
+
 .loginHeader {
     display: flex;
     position: fixed;
@@ -12,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: white;
 }
 
 .imageContainer {
