--- a/src/Components/SwiperComp.css
+++ b/src/Components/SwiperComp.css
@@ -30,6 +30,7 @@ body {
 .swiper-slide img {
   display: flex;
   width: 100%;
+  height: 50vh;
   align-items: center;
   align-self: center;
   align-content: center;
