--- a/src/Screens/DriverDashboard.css
+++ b/src/Screens/DriverDashboard.css
@@ -1,13 +1,3 @@
-.devNavBar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #323232;
-    padding: 10px;
-    color: white;
-
-}
 
 .PersonalDetails {
     padding-top: 30px;
@@ -35,6 +25,9 @@
     z-index: 100;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+.dashHeader> img{
+    margin: 10px;
+}
 
 .dashHeaderButtonContainer {
     display: flex;
@@ -42,6 +35,7 @@
     gap: 30px;
     align-items: center;
     justify-content: space-between;
+    margin: 10px;
 }
 
 
@@ -192,6 +186,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+
 }
 
 .dashboard-content {
