--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -109,10 +109,10 @@
     width: 100%;
 }
 
-.map>img {
+.map>video {
     width: 100%;
-    height: 70vh;
-    object-fit: cover;
+    /* height: 70vh; */
+    object-fit: contain;
 }
 
 .about,
@@ -164,7 +164,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #D69F29;
+    background-color: #ffde97;
     padding: 30px 30px;
     gap: 10px;
     border-radius: 12px;
@@ -238,19 +238,20 @@
     color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* padding: 30px 0px; */
+    padding-bottom: 50px;
 }
 
 .footer-left {
-    /* margin-left: 20%; */
+    margin-left: 20px;
 }
 
 .footer-right {
     display: flex;
     justify-content: space-between;
     /* background-color: red; */
-    /* margin-right: 20%; */
+    margin-right: 20px;
     gap: 20px;
+
 }
 
 @media only screen and (max-width: 1024px) {
