--- a/src/Screens/DriverLogin.css
+++ b/src/Screens/DriverLogin.css
@@ -51,6 +51,20 @@
     align-items: center;
     padding: 20px;
 }
+.phoneInput{
+    background-color: #f8f8f8;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100%;
+}
+.phoneInput input{
+    font-size: 15px;
+    background-color: #f8f8f8;
+    outline: none !important;
+    border:none !important;
+    box-shadow: none !important;
+}
 
 @media only screen and (max-width: 768px) {
     .mainContainer {
