final changes part 2

--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -259,6 +259,10 @@
         flex-direction: column;
         gap: 30px;
     }
+    .map>video{
+        height: 30vh;
+        object-fit: cover;
+    }
 
     .service-container {
         flex-direction: column;
