--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -125,7 +125,7 @@
     /* background-color: red; */
     width: 80%;
     padding: 30px 20px;
-    gap: 30px;
+    /* gap: 30px; */
 }
 
 .about-grid {
