--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -1,363 +1,395 @@
 .header {
-    width: 100vw;
-    height: 60px;
-    display: flex;
-    position: fixed;
-    top: 0;
-    background-color: white;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    z-index: 100;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  width: 100vw;
+  height: 60px;
+  display: flex;
+  position: fixed;
+  top: 0;
+  background-color: white;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 100;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .headerButtonsContainer {
-    display: flex;
-    flex-direction: row;
-    /* width: 500px; */
-    gap: 30px;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  /* width: 500px; */
+  gap: 30px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .userActionContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  background-color: white;
+  margin-top: 0px;
 }
 
-.hero>video {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    margin-top: 60px;
+.hero > video {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  margin-top: 60px;
 }
 
 .hero {
-    width: 100%;
-    position: relative;
-    background-color: black;
+  width: 100%;
+  position: relative;
+  background-color: black;
 }
 
 .hero-text {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
-    color: white;
-    padding-bottom: 100px;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  color: white;
+  padding-bottom: 100px;
 }
 
-.hero-text>h1 {
-    font-size: 70px;
-    font-weight: 700;
+.hero-text > h1 {
+  font-size: 70px;
+  font-weight: 700;
 }
 
-.hero-text>p {
-    font-size: 28px;
-    font-weight: 100;
+.hero-text > p {
+  font-size: 28px;
+  font-weight: 100;
 }
 
 .blank {
-    background-color: black;
+  background-color: black;
 }
 
-
 .flow {
-    width: 100%;
-    background-color: black;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 50px 0px;
-    gap: 10%;
+  width: 100%;
+  background-color: black;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0px;
+  gap: 10%;
 }
 
 .flow-item {
-    background-color: var(--yellow);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-    width: 8%;
-    object-fit: contain;
-    border-radius: 12px;
-    background-color: #D69F29;
+  background-color: var(--yellow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  width: 8%;
+  object-fit: contain;
+  border-radius: 12px;
+  background-color: #d69f29;
 }
 
 .map {
-    width: 100%;
+  width: 100%;
 }
 
-.map>video {
-    width: 100%;
-    /* height: 70vh; */
-    object-fit: contain;
+.map > video {
+  width: 100%;
+  /* height: 70vh; */
+  object-fit: contain;
 }
 
 .about,
 .service,
 .trucks {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* align-items: center; */
-    /* background-color: red; */
-    width: 80%;
-    padding: 30px 20px;
-    /* gap: 30px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  /* background-color: red; */
+  width: 80%;
+  padding: 30px 20px;
+  /* gap: 30px; */
 }
 
 .about-grid {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 30px;
 }
 
 .about-left {
-    /* background-color: red; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .about-right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.about-right>img {
-    width: 100%;
+.about-right > img {
+  width: 100%;
 }
 
 .service-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* padding: 10px; */
-    gap: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 10px; */
+  gap: 30px;
 }
 
 .service-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #ffde97;
-    padding: 30px 30px;
-    gap: 10px;
-    border-radius: 12px;
-    /* width: 50%; */
-    height: auto;
-    object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #ffde97;
+  padding: 30px 30px;
+  gap: 10px;
+  border-radius: 12px;
+  /* width: 50%; */
+  height: auto;
+  object-fit: contain;
 }
 
-.service-box>img {
-    width: 200px;
-    height: 150px;
-    object-fit: contain;
+.service-box > img {
+  width: 200px;
+  height: 150px;
+  object-fit: contain;
 }
 
 .trucks-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    /* Adjust the minimum and maximum width as needed */
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* Adjust the minimum and maximum width as needed */
+  gap: 20px;
 }
 
-
 .carousel-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #ebdbb8;
-    border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #ebdbb8;
+  border-radius: 12px;
 }
 
 .mobile {
-    width: 80%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 80px;
-    /* background-color: blue; */
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 80px;
+  /* background-color: blue; */
 }
 
 .mobile-text {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin-right: 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-right: 80px;
+  /* background-color: red; */
+  margin-right: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .apply-button {
-    background-color: var(--yellow);
-    padding: 10px 30px;
-    border: none;
-    outline: none;
-    color: white;
-    cursor: pointer;
-    border-radius: 12px;
-    margin-top: 30px;
+  background-color: var(--yellow);
+  padding: 10px 30px;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 12px;
+  margin-top: 30px;
 }
 
 .mobile-left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.mobile-left>img {
-    width: 100%;
+.mobile-left > img {
+  width: 100%;
 }
 
 .landing-footer {
-    background-color: #323232;
-    width: 100%;
-    color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-bottom: 50px;
+  background-color: #323232;
+  width: 100%;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-bottom: 50px;
+}
+
+.footer-box {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center;s */
+  /* gap: 30px; */
+}
+
+.footer-box > h2 {
+  text-decoration: underline;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.footer-links > a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
 
 .footer-left {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .footer-right {
-    display: flex;
-    justify-content: space-between;
-    /* background-color: red; */
-    margin-right: 20px;
-    gap: 20px;
-
+  display: flex;
+  justify-content: space-around;
+  /* background-color: red; */
+  margin-right: 50px;
+  /* gap: 20px; */
 }
 
 @media only screen and (max-width: 1024px) {
-    .flow {
-        flex-direction: column;
-        gap: 30px;
-    }
-    .map>video{
-        height: 30vh;
-        object-fit: cover;
-    }
+  .flow {
+    flex-direction: column;
+    gap: 30px;
+  }
+  .map > video {
+    height: 30vh;
+    object-fit: cover;
+  }
 
-    .service-container {
-        flex-direction: column;
-    }
+  .service-container {
+    flex-direction: column;
+  }
 
-
-    .landing-footer {
-        display: none;
-    }
+  .landing-footer {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .hero-text>p {
-        padding: 10px
-    }
+  .hero-text > p {
+    padding: 10px;
+  }
 
-    .flow-item {
-        width: 80%;
-        height: 80px;
-    }
+  .flow-item {
+    width: 80%;
+    height: 80px;
+  }
 
-    .about-grid {
-        grid-template-columns: 1fr;
-    }
+  .about-grid {
+    grid-template-columns: 1fr;
+  }
 
-    .service-box {
-        /* height: 200px; */
-        width: 100%;
-        /* padding: 30px; */
-    }
+  .service-box {
+    /* height: 200px; */
+    width: 100%;
+    /* padding: 30px; */
+  }
 
-    .service-box>p {
-        padding: 30px;
-    }
+  .service-box > p {
+    padding: 30px;
+  }
 
-    .service-box>img {
-        /* width: 30%; */
-    }
+  .service-box > img {
+    /* width: 30%; */
+  }
 
-    .mobile {
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
+  .mobile {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 
-    .mobile-text {
-        margin-right: 0px;
-    }
+  .apply-button {
+    margin: 10px;
+    font-size: 20px;
+  }
 
-    .apply-button {
-        margin: 10px;
-        font-size: 20px;
+  .headerButtonsContainer {
+    display: none;
+  }
 
-    }
+  .landing-footer {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 
-    .headerButtonsContainer {
-        display: none;
-    }
-
-    .landing-footer {
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .footer-box {
-        padding: 10px;
-    }
-
+  .footer-box {
+    padding: 10px;
+  }
 }
 
 @media only screen and (max-width: 425px) {
-    .userActionContainer {
-        display: none;
-    }
+  .userActionContainer {
+    display: none;
+  }
 
-    .landing-footer {
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
+  .landing-footer {
+    /* width: 100vw; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    /* text-align: center; */
+  }
 
-    .footer-box {
-        padding: 10px;
-    }
+  .footer-left {
+    display: flex;
+    justify-content: center;
+    /* background-color: red; */
+    margin-left: 0px;
+  }
 
-    .footer-right {
-        flex-direction: column;
-    }
+  .footer-left > h1 {
+    text-align: center;
+  }
+
+  .footer-box {
+    /* padding: 10px; */
+  }
+
+  .footer-right {
+    flex-direction: column;
+    margin-right: 0px;
+  }
 }
