--- a/src/Screens/DriverLogin.css
+++ b/src/Screens/DriverLogin.css
@@ -1,94 +1,99 @@
-
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
 .loginHeader {
-    display: flex;
-    position: fixed;
-    top: 10px;
-    width: 100%;
-    background-color: white;
-    justify-content: center;
+  display: flex;
+  position: fixed;
+  top: 10px;
+  width: 100%;
+  background-color: white;
+  justify-content: center;
 }
 
 .screenHeight {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: white;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
 }
 
 .imageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  object-fit: contain;
 }
 
 .mainContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 100px;
-    border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 100px;
+  border-radius: 20px;
 }
 
 .signupContainer {
-    display: flex;
-    width: 400px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px;
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
 }
 
 .footerContainer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  background-color: #323232;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+}
+.phoneInput {
+  background-color: #f8f8f8;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+}
+.phoneInput input {
+  font-size: 15px;
+  background-color: #f8f8f8;
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+@media only screen and (max-width: 768px) {
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    align-items: center;
+    margin: 10px;
+  }
+
+  .imageContainer {
+    width: 80%;
+    padding-bottom: 10px;
+  }
+
+  .signupContainer {
+    width: 80%;
+  }
+
+  .footerContainer {
     display: flex;
     position: fixed;
     bottom: 0;
     width: 100vw;
-    background-color: #323232;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-}
-.phoneInput{
-    background-color: #f8f8f8;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    width: 100%;
-}
-.phoneInput input{
-    font-size: 15px;
-    background-color: #f8f8f8;
-    outline: none !important;
-    border:none !important;
-    box-shadow: none !important;
-}
-
-@media only screen and (max-width: 768px) {
-    .mainContainer {
-        display: flex;
-        flex-direction: column;
-        margin: 0px;
-        align-items: center;
-        margin: 10px;
-    }
-
-    .imageContainer {
-        width: 80%;
-        padding-bottom: 10px;
-    }
-
-    .signupContainer {
-        width: 80%;
-    }
-
-    .footerContainer {
-        display: flex;
-        position: fixed;
-        bottom: 0;
-        width: 100vw;
-        flex-direction: column;
-    }
+    flex-direction: column;
+  }
 }
