--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -34,8 +34,13 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  background-color: white;
+  /* background-color: white; */
   margin-top: 0px;
+
+  background-color: #fafafa;
+  /* opacity: 0.5; */
+  background-image: linear-gradient(0deg, #fafafa 50%, #f1f1f1 50%);
+  background-size: 10px 10px;
 }
 
 .hero > video {
@@ -128,27 +133,67 @@
   /* gap: 30px; */
 }
 
-.about-grid {
+.about {
+  gap: 60px;
+}
+
+.about-split > h1 {
+  font-size: 74px;
+}
+
+.about-split > p {
+  font-size: 16px;
+}
+
+.about-split {
   display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 30px;
-}
-
-.about-left {
-  /* background-color: red; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.about-right {
-  display: flex;
-  justify-content: center;
+  grid-template-columns: 0.5fr 1fr;
   align-items: center;
 }
 
+.about-left,
+.about-right {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.about-left > img,
 .about-right > img {
-  width: 100%;
+  height: 500px;
+  width: 500px;
+}
+
+.about-left > img {
+  border-radius: 50% 80% 50% 80%;
+}
+
+.about-right > img {
+  border-radius: 80% 50% 80% 50%;
+}
+
+.about-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  flex: 1;
+}
+
+.about-info > h1 {
+  font-size: 64px;
+}
+
+.about-info > ul > li {
+  font-size: 16px;
+}
+
+.service > h1 {
+  font-size: 74px;
+}
+
+.service > p {
+  font-size: 16px;
 }
 
 .service-container {
@@ -157,6 +202,7 @@
   align-items: center;
   /* padding: 10px; */
   gap: 30px;
+  margin-top: 20px;
 }
 
 .service-box {
@@ -177,6 +223,14 @@
   width: 200px;
   height: 150px;
   object-fit: contain;
+}
+
+.trucks > h1 {
+  font-size: 74px;
+}
+
+.trucks > p {
+  font-size: 16px;
 }
 
 .trucks-container {
@@ -215,6 +269,14 @@
   justify-content: center;
 }
 
+.mobile-text h1 {
+  font-size: 64px;
+}
+
+.mobile-text p {
+  font-size: 16px;
+}
+
 .apply-button {
   background-color: var(--yellow);
   padding: 10px 30px;
@@ -242,7 +304,7 @@
   color: white;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding-bottom: 50px;
+  /* padding-bottom: 50px; */
 }
 
 .footer-box {
