--- a/src/Components/SwiperComp.css
+++ b/src/Components/SwiperComp.css
@@ -37,3 +37,10 @@ body {
   align-self: center;
   align-content: center;
 }
+
+@media only screen and (max-width: 768px) {
+  .swiper-slide {
+    width: 100%;
+    height: 100%;
+  }
+}
