footer, header, login, and some changes

--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -21,6 +21,13 @@
   justify-content: space-between;
 }
 
+.logoutSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
 .userActionContainer {
   display: flex;
   flex-direction: row;
@@ -45,7 +52,7 @@
   overflow-x: hidden;
 }
 
-.hero > video {
+.hero>video {
   width: 100%;
   height: 100vh;
   object-fit: cover;
@@ -74,12 +81,12 @@
   padding-bottom: 100px;
 }
 
-.hero-text > h1 {
+.hero-text>h1 {
   font-size: 70px;
   font-weight: 700;
 }
 
-.hero-text > p {
+.hero-text>p {
   font-size: 28px;
   font-weight: 100;
 }
@@ -116,7 +123,7 @@
   width: 100%;
 }
 
-.map > video {
+.map>video {
   width: 100%;
   /* height: 70vh; */
   object-fit: contain;
@@ -136,22 +143,31 @@
 }
 
 .about {
-  gap: 60px;
-}
-
-.about-split > h1 {
-  font-size: 74px;
-}
-
-.about-split > p {
-  font-size: 16px;
+  gap: 40px;
 }
 
 .about-split {
+  gap: 50px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.about-split>h1 {
+  font-size: 74px;
+  margin: 0px;
+}
+
+.about-split>p {
+  font-size: 18px;
+  line-height: 2;
+}
+
+/* .about-split {
   display: grid;
   grid-template-columns: 0.5fr 1fr;
   align-items: center;
-}
+} */
 
 .about-left,
 .about-right {
@@ -160,17 +176,17 @@
   gap: 50px;
 }
 
-.about-left > img,
-.about-right > img {
+.about-left>img,
+.about-right>img {
   height: 500px;
   width: 500px;
 }
 
-.about-left > img {
+.about-left>img {
   border-radius: 50% 80% 50% 80%;
 }
 
-.about-right > img {
+.about-right>img {
   border-radius: 80% 50% 80% 50%;
 }
 
@@ -182,20 +198,43 @@
   flex: 1;
 }
 
-.about-info > h1 {
+.about-info>h1 {
   font-size: 64px;
 }
 
-.about-info > ul > li {
-  font-size: 16px;
+.about-info>ul>li {
+  font-size: 18px;
+  line-height: 2rem;
 }
 
-.service > h1 {
+.service>h1 {
   font-size: 74px;
+  color: white;
+  text-align: center;
+  margin: 0px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
-.service > p {
+.service>h2 {
+  color: white;
+  text-align: center;
+  text-shadow: 2px 2px 4px #000000;
+
+}
+
+.serviceBackground {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-image: url("../Assets/about1.jpg");
+  background-repeat: no-repeat;
+  padding: 30px 0px;
+}
+
+.service>p {
   font-size: 16px;
+  line-height: 2rem;
+  color: white;
 }
 
 .service-container {
@@ -210,26 +249,33 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #ffde97;
+  background-color: #ffe8b7;
   padding: 30px 30px;
   gap: 10px;
   border-radius: 12px;
   /* width: 50%; */
-  height: auto;
+  height: 380px;
   object-fit: contain;
 }
 
-.service-box > img {
+.service-box>img {
   width: 200px;
   height: 150px;
   object-fit: contain;
 }
 
-.trucks > h1 {
+.service-box>p {
+  line-height: 2rem;
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+}
+
+.trucks>h1 {
   font-size: 74px;
 }
 
-.trucks > p {
+.trucks>p {
   font-size: 16px;
 }
 
@@ -294,7 +340,7 @@
   align-items: center;
 }
 
-.mobile-left > img {
+.mobile-left>img {
   width: 100%;
 }
 
@@ -302,9 +348,10 @@
   background-color: #323232;
   width: 100%;
   color: white;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  /* padding-bottom: 50px; */
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
 
 .footer-box {
@@ -315,24 +362,26 @@
   /* gap: 30px; */
 }
 
-.footer-box > h2 {
-  text-decoration: underline;
+.footer-box>h2 {
+  /* text-decoration: underline; */
 }
 
 .footer-links {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
 }
 
-.footer-links > a {
+.footer-links>a {
   text-decoration: none;
   color: white;
   cursor: pointer;
 }
 
-.footer-left {
-  margin-left: 20px;
+
+.footer-box>img {
+  width: 150px;
+  object-fit: contain;
 }
 
 .footer-right {
@@ -348,11 +397,12 @@
     /* flex-direction: column; */
     gap: 30px;
   }
+
   .flow-item {
     width: 50%;
   }
 
-  .map > video {
+  .map>video {
     height: 30vh;
     object-fit: cover;
   }
@@ -382,7 +432,7 @@
     flex-direction: column;
   }
 
-  .hero-text > p {
+  .hero-text>p {
     padding: 10px;
   }
 
@@ -396,13 +446,13 @@
   }
 
   .service-box {
-    /* height: 200px; */
+    height: 500px;
     width: 100%;
     padding: 0px;
   }
 
-  .service-box > p {
-    padding: 30px;
+  .service-box>p {
+    padding: 20px;
   }
 
   .mobile {
@@ -437,7 +487,30 @@
 }
 
 @media only screen and (max-width: 425px) {
+  .header {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    gap: 10px;
+  }
+
+  .hero>video {
+    margin-top: 0px;
+  }
+
+  .headerButtonsContainer {
+    display: none;
+  }
+
   .userActionContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin: 10px;
+  }
+
+  .logoutSection {
     display: none;
   }
 
@@ -457,7 +530,7 @@
     margin-left: 0px;
   }
 
-  .footer-left > h1 {
+  .footer-left>h1 {
     text-align: center;
   }
 
@@ -470,8 +543,8 @@
     margin-right: 0px;
   }
 
-  .about-left > img,
-  .about-right > img {
+  .about-left>img,
+  .about-right>img {
     width: 100%;
     height: 100%;
   }
@@ -482,11 +555,11 @@
   }
 
   .mobile-text h1,
-  .trucks > h1,
-  .service > h1,
-  .about-info > h1,
-  .about-split > h1,
-  .hero-text > h1 {
+  .trucks>h1,
+  .service>h1,
+  .about-info>h1,
+  .about-split>h1,
+  .hero-text>h1 {
     font-size: 48px;
   }
 }
