--- a/src/Screens/DriverRegistration.css
+++ b/src/Screens/DriverRegistration.css
@@ -6,13 +6,12 @@
   background-color: #323232;
   padding: 10px;
   color: white;
-
 }
 
 .select {
   padding: 14px;
   border-radius: 12px;
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
   border: none;
   outline: none;
 }
@@ -48,7 +47,7 @@
   display: flex;
   border: 2px;
   border-radius: 15px;
-  border-color: #D69F29;
+  border-color: #d69f29;
   border-style: solid;
   padding: 10px;
   height: 70px;
@@ -143,7 +142,6 @@
 
 .footerLogo {
   float: left;
-
 }
 
 .footerContent {
@@ -164,7 +162,6 @@
   width: 30%;
   font-size: 20px;
   color: white;
-
 }
 
 .footerRightSection {
@@ -192,6 +189,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
