sitemap and some changes

--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -255,6 +255,12 @@
   /* width: 50%; */
   height: 380px;
   object-fit: contain;
+  background: rgba(255, 232, 183, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .service-box>img {
