--- a/src/Screens/CustomerPortal/Quote/QuotePage.css
+++ b/src/Screens/CustomerPortal/Quote/QuotePage.css
@@ -4,6 +4,9 @@
     gap: 40px;
     padding-left: 10%;
     padding-right: 10%;
+    padding-top: 2%;
+    padding-bottom: 5%;
+    background-color: white;
 }
 
 .vehicleBanner {
