customer portal ui responsive

--- a/src/Screens/CustomerPortal/BillingPage/BillingPage.css
+++ b/src/Screens/CustomerPortal/BillingPage/BillingPage.css
@@ -90,7 +90,7 @@
         flex-direction: column;
         gap: 20px;
         align-items: center;
-
+        margin-top: 50px;
     }
 
     .mapAndDescription {
