--- a/src/Screens/CustomerPortal/OrderTrackingPage/OrderTrackingPage.css
+++ b/src/Screens/CustomerPortal/OrderTrackingPage/OrderTrackingPage.css
@@ -6,6 +6,13 @@
     background-color: white;
 }
 
+.trackPageTop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
 .trackPageSummary {
     display: flex;
     flex-direction: column;
@@ -39,4 +46,37 @@
     border-radius: 15px;
     background-color: black;
     margin: 50px;
+}
+
+@media screen and (max-width: 1024px) {
+    .orderTrackingPage {
+        padding: 20px;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .trackPageTop {
+        flex-direction: column;
+    }
+
+    .trackPageSummary {}
+
+    .trackPagePrice {
+        align-items: center;
+        text-align: center;
+    }
+
+    .trackPageStatusSection {
+        flex-direction: column;
+        height: auto;
+        align-items: center;
+    }
+
+    .trackPageStepper {}
+
+    .trackPageMap {
+        width: 90%;
+        height: 200px;
+        margin: 0;
+    }
 }
