--- a/src/Screens/CustomerPortal/Quote/QuotePage.css
+++ b/src/Screens/CustomerPortal/Quote/QuotePage.css
@@ -7,6 +7,7 @@
     padding-top: 2%;
     padding-bottom: 5%;
     background-color: white;
+    overflow-x: hidden;
 }
 
 .vehicleBanner {
@@ -79,6 +80,7 @@
     justify-content: space-between;
     align-items: center;
     background-image: url("../../../Assets/CustomerPortal/quoteItemSpecificationBackground.png");
+    overflow-x: hidden;
 }
 
 .quoteItemSpecSectionMapSection {
@@ -112,9 +114,109 @@
     color: #4A4A4A;
 }
 
+.alternateContactContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+}
+
+.mainExcludedItemContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 50%;
+    align-self: center;
+}
+
 .excludedItemContainer {
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .customerQuotePage {
+        padding-left: 2%;
+        padding-right: 2%;
+        text-align: center;
+        gap: 15px;
+        margin-top: 50px;
+    }
+
+    .vehicleBanner {
+        gap: 10px;
+        flex-direction: column;
+        height: auto;
+    }
+
+    .getQuoteButton {
+        width: 200px;
+        height: 200px;
+        font-size: 1.5rem;
+    }
+
+    .dateSelectionSection {
+        gap: 5%;
+        flex-direction: column;
+    }
+
+    .chooseDateButton {
+        width: 200px;
+        font-size: 1rem;
+    }
+
+    .pickupAndDropSectionBanner {
+        width: 100%;
+        gap: 12px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .quoteItemSpecSection {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .quoteItemSpecSectionMapSection {
+        width: 80%;
+        height: 200px;
+        margin: 10px;
+    }
+
+    .quoteItemSpecSectionRightSection {
+        width: 100vw;
+    }
+
+    .quoteItemSpecSectionRightSectionEntrycontainer {
+        width: 80%;
+        flex-direction: column;
+    }
+
+    .quoteItemSpecSectionRightSectionText {
+        font-size: 1rem;
+    }
+
+    .alternateContactContainer {
+        align-items: center;
+        flex-direction: column;
+        height: auto;
+        gap: 15px;
+    }
+
+    .mainExcludedItemContainer {
+        flex-direction: column;
+        height: auto;
+        gap: 15px;
+    }
+
+    .excludedItemContainer {
+        gap: 10px;
+    }
+
 }
