Added map component

--- a/src/Screens/DriverPortal/IncommingDeliveryDetailsScreen/DeliveryStatusScreen.css
+++ b/src/Screens/DriverPortal/IncommingDeliveryDetailsScreen/DeliveryStatusScreen.css
@@ -29,6 +29,11 @@
     margin-right: 50px;
 }
 
+.leaflet-container {
+    width: 100%;
+    height: 100%;
+}
+
 .mapSectionLeft {
     width: 50%;
     height: 400px;
