--- a/src/Screens/CustomerPortal/BillingPage/BillingPage.css
+++ b/src/Screens/CustomerPortal/BillingPage/BillingPage.css
@@ -29,10 +29,15 @@
     gap: 20px;
 }
 
+.leaflet-container {
+    width: 100%;
+    height: 100%;
+}
+
 .summaryMap {
     width: 450px;
     height: 100%;
-    background-color: blue;
+    /* background-color: blue; */
     border-radius: 15px;
 }
 
