--- a/src/Screens/CustomerPortal/OrderTrackingPage/OrderTrackingPage.css
+++ b/src/Screens/CustomerPortal/OrderTrackingPage/OrderTrackingPage.css
@@ -44,8 +44,13 @@
     width: 55%;
     height: 400px;
     border-radius: 15px;
-    background-color: black;
+    /* background-color: black; */
     margin: 50px;
+}
+
+.leaflet-container {
+    width: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 1024px) {
