--- a/src/Screens/CustomerPortal/Quote/QuotePage.css
+++ b/src/Screens/CustomerPortal/Quote/QuotePage.css
@@ -91,6 +91,11 @@
     border-radius: 15px;
 }
 
+.leaflet-container {
+    width: 100%;
+    height: 100%;
+}
+
 .quoteItemSpecSectionRightSection {
     margin-right: 10%;
     display: grid;
