--- a/src/Screens/DriverPortal/ActiveDeliveryScreen/ActiveDeliveryScreen.css
+++ b/src/Screens/DriverPortal/ActiveDeliveryScreen/ActiveDeliveryScreen.css
@@ -11,7 +11,12 @@
     height: 80vh;
     width: 100%;
     border-radius: 15px;
-    background-color: black;
+    /* background-color: black; */
+}
+
+.leaflet-container {
+    width: 100%;
+    height: 100%;
 }
 
 .buttonStyle {
