--- a/src/Screens/CustomerPortal/CustomerSignIn/SignIn.css
+++ b/src/Screens/CustomerPortal/CustomerSignIn/SignIn.css
@@ -1,10 +1,16 @@
-.customerSignInMain {
-
+/* .customerSignInMain {
     height: 100vh;
     width: 100vw;
     background-color: white;
     display: grid;
     grid-template-columns: 6fr 4fr;
+} */
+
+.customerSignInMain {
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    min-height: 100dvh;
 }
 
 .customerSignInImageContainer {
@@ -17,6 +23,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 60%;
 }
 
 .customerSignInImageContainer img {
@@ -30,7 +37,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding: 5%;
+    width: 30%;
 }
 
 .SignInFieldsContainer {
@@ -64,3 +72,35 @@
     font-weight: bold;
     box-shadow: 0px 0px 10px 0px #ffe65c;
 }
+
+@media only screen and (max-width: 768px) {
+    .customerSignInMain {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .customerSignInImageContainer{
+        padding: 5%;
+        background-color: #FFF9EB;
+        background-image: url('../../../Assets/CustomerPortal/SignInPageBack.png');
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        height: 60%;
+    }
+
+    .customerSignInFieldsMain{
+        width: 90%;
+    }
+
+    .customerSignInImageContainer img {
+        padding-top: 10%;
+        max-width: 100%;
+        height: 50%;
+    }
+  }
