--- a/src/Components/CustomTextFieldCSS.css
+++ b/src/Components/CustomTextFieldCSS.css
@@ -2,10 +2,11 @@
     display: flex;
     border: 2px;
     border-radius: 15px;
-    border-color: #D69F29;
-    border-style: solid;
+    border: none;
     padding: 10px;
     width: 100%;
+    box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);
+    background-color: #FFECC0;
 }
 
 .textField {
