--- a/src/Screens/CustomerPortal/Components/FlightOfStairsComp/FlightOfStairsComp.css
+++ b/src/Screens/CustomerPortal/Components/FlightOfStairsComp/FlightOfStairsComp.css
@@ -11,24 +11,25 @@
 .countContainer {
     width: 30px;
     height: 30px;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: #FFECC0;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #686868;
+    box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);
 }
 
 .addContainer {
     width: 30px;
     height: 30px;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: #FFECC0;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     transition: 0.3s;
+    box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);
 }
 
 .addContainer:hover {
