--- a/src/Screens/CustomerPortal/OrderTrackingPage/OrderTrackingPage.css
+++ b/src/Screens/CustomerPortal/OrderTrackingPage/OrderTrackingPage.css
@@ -1,7 +1,7 @@
 .orderTrackingPage {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     padding: 50px;
     background-color: white;
 }
@@ -10,6 +10,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+    align-self: flex-start;
     width: 100%;
 }
 
@@ -48,6 +51,19 @@
     margin: 50px;
 }
 
+.driverSideImageSection {
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    gap: 20px;
+}
+
+.trackPageImage {
+    height: 300px;
+    width: auto;
+    border-radius: 10px;
+}
+
 .leaflet-container {
     width: 100%;
     height: 100%;
@@ -78,6 +94,17 @@
     }
 
     .trackPageStepper {}
+
+    .driverSideImageSection {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .trackPageImage {
+        height: auto;
+        width: 80%;
+        border-radius: 10px;
+    }
 
     .trackPageMap {
         width: 90%;
