--- a/src/Screens/DriverPortal/IncommingDeliveryDetailsScreen/DeliveryStatusScreen.css
+++ b/src/Screens/DriverPortal/IncommingDeliveryDetailsScreen/DeliveryStatusScreen.css
@@ -51,8 +51,17 @@
 .itemDimensions {
     display: flex;
     flex-direction: row;
+    /* margin-left: 50px;
+    margin-right: 50px; */
+}
+
+.itemRelatedSection {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
     margin-left: 50px;
     margin-right: 50px;
+    gap: 20px;
 }
 
 .buttonContainer {
@@ -61,7 +70,7 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
-    width: 70%;
+    /* width: 70%; */
     align-self: center;
     margin-bottom: 50px;
 
@@ -86,6 +95,25 @@
 
     .mapSectionLeft {
         width: 85%;
+    }
+
+    .mapSectionRight {
+        margin: 10px;
+    }
+
+    .itemRelatedSection {
+        flex-direction: column;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .itemRelatedSection>div {
+        /* width: 50%; */
+
+    }
+
+    .itemRelatedSection>div {
+        width: 100%;
     }
 
     .itemDimensions {
