--- a/src/Screens/CustomerPortal/Components/CustomerPortalHeader/CustomerPortalHeader.css
+++ b/src/Screens/CustomerPortal/Components/CustomerPortalHeader/CustomerPortalHeader.css
@@ -4,8 +4,10 @@
     align-items: center;
     width: 100%;
     height: 60px;
-    background-color: #323232;
-    z-index: 100;
+    background-color: white;
+    z-index: 1000000;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.268);
 }
 
 .CustomerPortalHeaderLogo {
